--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
   },
   "dependencies": {
     "blockly": "^3.20191014.1",
+    "copy-webpack-plugin": "^5.1.1",
+    "source-map": "^0.7.3",
     "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.5",
-    "copy-webpack-plugin": "^5.0.3"
+    "webpack-cli": "^3.3.5"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "http-server": "^0.11.1",
     "standard": "^14.3.1"
   }
