--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   },
   "dependencies": {
     "blockly": "^3.20191014.1",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
-    "source-map": "^0.7.3",
-    "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.5"
+    "source-map": "^0.7.3"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.0",
@@ -22,6 +21,8 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "http-server": "^0.11.1",
-    "standard": "^14.3.1"
+    "standard": "^14.3.1",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   }
 }
